updated jfrog cli setup

--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -46,12 +46,13 @@ jobs:
       # 5. Copy the "Show Snippet" YAML configuration
       # 6. Replace this commented section with the copied snippet
       #
-      # - name: Setup JFrog CLI
-      #   uses: jfrog/setup-jfrog-cli@v4
-      #   env:
-      #     JF_URL: ${{ vars.ARTIFACTORY_URL }}
-      #   with:
-      #     oidc-provider-name: jfrog-githuboidc
+      - uses: jfrog/setup-jfrog-cli@v4
+        env:
+            JF_URL: ${{ARTIFACTORY_URL}} 
+        with:
+            oidc-provider-name: jfrog-githuboidc 
+          
+
       
       # End Lab 1.1 #########################################################
 
