--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -48,7 +48,7 @@ jobs:
       #
       - uses: jfrog/setup-jfrog-cli@v4
         env:
-            JF_URL: ${{ARTIFACTORY_URL}} 
+            JF_URL: ${{ vars.ARTIFACTORY_URL }} 
         with:
             oidc-provider-name: jfrog-githuboidc 
           
